# harfang-plugin-ffmpeg

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindFFMPEG.cmake
test/: CMakeLists.txt  main.cpp  main.lua
test/assets/: CMakeLists.txt
test/assets/shaders/: video_stream_fs.sc  video_stream_varying.def  video_stream_vs.sc
